Regression: Attaching links from tha same node to Join Geometry node leads to only the last link being draw. #105601

Closed
opened 2023-03-09 15:25:41 +01:00 by Jakub Jaszewski · 1 comment

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-30 00:00, hash: rB11de4aa0cea7
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-27 23:25, hash: rB3a9e5891420d

Short description of error
Attaching multiple links starting from the same node or reroute to one Join Geometry node leads to only the last (bottom) link being draw.

Exact steps for others to reproduce the error

  1. In Geometry Nodes editor add Join Geometry Node.
  2. Attach multiple links from the same Geometry socket on one node or reroute.
  3. Observe the result.
**Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-30 00:00, hash: `rB11de4aa0cea7` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-27 23:25, hash: `rB3a9e5891420d` **Short description of error** Attaching multiple links starting from the same node or reroute to one `Join Geometry` node leads to only the last (bottom) link being draw. **Exact steps for others to reproduce the error** 1. In Geometry Nodes editor add `Join Geometry` Node. 2. Attach multiple links from the same `Geometry` socket on one node or reroute. 3. Observe the result.
Jakub Jaszewski added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-09 15:25:42 +01:00
Iliya Katushenock changed title from Attaching links from tha same node to `Join Geometry` node leads to only the last link being draw. to Regression: Attaching links from tha same node to `Join Geometry` node leads to only the last link being draw. 2023-03-09 15:51:07 +01:00

It's even worse...
I'll bisect this
image

It's even worse... I'll bisect this ![image](/attachments/c9cebeeb-518a-436f-b5bf-577e05592d39)
Iliya Katushenock added
Type
Bug
and removed
Type
Report
labels 2023-03-09 15:52:24 +01:00
Leon Schittek self-assigned this 2023-03-09 18:12:31 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-11 08:28:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105601
No description provided.