Fix #105601: Remove duplicates when inserting links into multi inputs

Fix a regression that allowed to create several links between an
output socket and a multi input socket.

This regression was caused by commit 89aae4ac82.